# six-birds-theory

./: .gitignore  .package-repo-snapshot.json  CITATION.cff  README.md  check_lean.sh  find_missing_identifiers.csv  repomix.config.json  repomix.sh  zenodo_related_works.csv  zenodo_related_works.tsv
python/: README.md  pyproject.toml
python/scripts/: balanced_atoms_witness.py  dpi_sweep.py  ect_compression_witness.py  empirical_closure_demo.py  forcing_sweep.py  graph_p1_p2_demo.py  p1_gap_decrease_demo.py  protocol_trap_demo.py  refinement_help_hurt_sweep.py
python/tests/: test_acc_graph_one_form.py  test_balanced_atoms_icap.py  test_bridge_kernels_fmem_icap.py  test_ect_compression_witness.py  test_empirical_closure_absorption_refinement.py  test_empirical_closure_idempotence_defect_leakage.py  test_empirical_closure_idempotence_defect_tv.py  test_empirical_closure_refinement_can_hurt.py  test_empirical_closure_refinement_reveals_objects.py  test_forcing_exact_enumeration.py  test_forcing_fixed_weight_differs.py  test_forcing_monte_carlo_matches_theory.py  test_graph_cycles.py  test_graph_p1_edge_add_beta1_delta.py  test_graph_p2_cycle_rank_monotone.py  test_graph_spectral_gap_demo.py  test_markov.py  test_p1_spectral_gap_decrease.py  test_paths_dpi_nonstationary_init.py  test_paths_dpi_randomized.py  test_paths_kl_dpi.py  test_paths_nonstationary_boundary_term.py  test_paths_strict_hiding.py  test_protocol_clock_audit_phi_included.py  test_protocol_mphase_random_scan.py  test_protocol_stroboscopic.py  test_protocol_trap_external_vs_autonomous.py  (+3 more)
(+69 files in other folders)
